K8s-files/database/db-stateful-set.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: emp-db-ss # name of the Stateful set
spec: 
  serviceName: emp-db-service # service name that should be attached to 
  replicas: 1  # required number of pods of this statefuls set 
  selector:
    matchLabels:
      app: emp-db-pod # declaring the pods to which this Satefulset should connect to
  template:
    metadata:
      labels:
        app: emp-db-pod # declaring the pod names of this SS
    spec:
      containers:
        - name: emp-db # name of this container in pods
          image: mysql:8 # image that used to create the container
          ports:
            - containerPort: 3306 # port on which container should run
          resources:
            requests:
              cpu: 200m
              memory: 500Mi
            limits:
              cpu: 500m
              memory: 1Gi
          env:  # declaring the requied environment variables and values
            - name: MYSQL_DATABASE # key of the environment variable
              valueFrom:  # getting the values from the created secrets
                secretKeyRef:
                  name: demo-employee-secret # name of the secret
                  key: MYSQL_DATABASE # reference variable from which the value should be taken
            - name: MYSQL_USER
              valueFrom:
                secretKeyRef:
                  name: demo-employee-secret
                  key: MYSQL_USER
            - name: MYSQL_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: demo-employee-secret
                  key: MYSQL_PASSOWRD
            - name: MYSQL_ROOT_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: demo-employee-secret
                  key: MYSQL_ROOT_PASSWORD
          volumeMounts:
            - name: mysql-emp-data   # ref volumename to claim the volume
              mountPath: /var/lib/mysql  # path inside the container where we get data
          startupProbe:  # it confirms the container is started successfuly
            exec:  # informing to check the status by executing a command
              command:  # mentioning the command 
                - /bin/sh
                - -c
                - mysqladmin ping -h localhost -u root -p"$MYSQL_ROOT_PASSWORD" --silent
            initialDelaySeconds: 10  # start checking after 10 sec of container start
            periodSeconds: 5 # check periodically for every 5 seconds
            failureThreshold: 5  # allowd up to 5 failure attempts
          # liveness and readiness probes starts checking only after the startup probe was success
          livenessProbe: # in confirms the container is running successfully
            exec:  # informing to check the status by executing a command
              command:  # mentioning the command 
                - /bin/sh
                - -c
                - mysqladmin ping -h localhost -u root -p"$MYSQL_ROOT_PASSWORD" --silent
            initialDelaySeconds: 5 # start checking after 10 sec of container start 
            periodSeconds: 10  # check periodically for every 10 seconds
          readinessProbe:  # it confirms the container is ready to accept the traffic to serve application
            exec:
              command:
                - /bin/sh
                - -c
                - mysql -u "$MYSQL_USER" -p"$MYSQL_PASSWORD" -e "SELECT 1" >/dev/null 2>&1
            periodSeconds: 10  # check periodically for every 10 seconds
      volumes:   # attaching the required PVC to this SS 
        - name: mysql-emp-data   # ref volume name declared before
          persistentVolumeClaim:      
            claimName: emp-db-vol  # mention the PVC which you claimed before
