K8s-files/database/deny-all-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: demo-app-deny-all
  namespace: demo-emp
spec:
  podSelector: {}
  policyTypes:
    - Egress
